dhall/tests/import/failure/importBoundary.txt
Type error: error: unbound variable `x`
 --> <current file>:1:0
  |
...
3 | x
  | ^ not found in this scope
  |
